force-app/main/default/objects/tc9_pr__Payment_Detail__c/tc9_pr__Payment_Detail__c.object-meta.xml
<CustomObject>
    <label>Payment Detail</label>
    <nameField>
        <displayFormat>PD-{0000000000}</displayFormat>
        <label>Payment Detail Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Payment Details</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>