force-app/main/default/objects/tc9_pr__Payment_Detail__c/fields/tc9_pr__ABA_File_Include_Balancing_Line__c.field-meta.xml
<CustomField>
    <fullName>tc9_pr__ABA_File_Include_Balancing_Line__c</fullName>
    <description>For Payment Entity&apos;s, defines if a ABA Payment File will include a balancing line. Your financial institution will specify if a balancing line is required.</description>
    <inlineHelpText>For Payment Entity&apos;s, defines if a ABA Payment File will include a balancing line. Your financial institution will specify if a balancing line is required.</inlineHelpText>
    <label>ABA File Include Balancing Line</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>tc9_pr__Yes_No_Picklists</valueSetName>
    </valueSet>
</CustomField>