force-app/main/default/objects/tc9_pr__Payment_Detail__c/fields/tc9_pr__ABA_File_User_identification_Number__c.field-meta.xml
<CustomField>
    <fullName>tc9_pr__ABA_File_User_identification_Number__c</fullName>
    <description>The User Identification Number that will be included on an ABA Payment File. The value to be defined in this field should be provided by your financial institution.</description>
    <inlineHelpText>The User Identification Number that will be included on an ABA Payment File. The value to be defined in this field should be provided by your financial institution.</inlineHelpText>
    <label>ABA File User identification Number</label>
    <type>TextArea</type>
</CustomField>