force-app/main/default/objects/tc9_pr__Payment_Detail__c/fields/tc9_pr__ABA_File_User_Preferred_Specification__c.field-meta.xml
<CustomField>
    <fullName>tc9_pr__ABA_File_User_Preferred_Specification__c</fullName>
    <description>For Payment Entity&apos;s, the User Preferred Specification that will be included on an ABA Payment File. The value to be defined in this field should be provided by your financial institution.</description>
    <inlineHelpText>For Payment Entity&apos;s, the User Preferred Specification that will be included on an ABA Payment File. The value to be defined in this field should be provided by your financial institution.</inlineHelpText>
    <label>ABA File User Preferred Specification</label>
    <type>TextArea</type>
</CustomField>