force-app/main/default/objects/tc9_pr__Payment_Detail__c/fields/tc9_pr__Bank_Abbreviation__c.field-meta.xml
<CustomField>
    <fullName>tc9_pr__Bank_Abbreviation__c</fullName>
    <description>The abbreviated version of the bank name.</description>
    <inlineHelpText>The abbreviated version of the bank name.</inlineHelpText>
    <label>Bank Abbreviation</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ABS</fullName>
            </value>
            <value>
                <fullName>ADC</fullName>
            </value>
            <value>
                <fullName>ADL</fullName>
            </value>
            <value>
                <fullName>ADV</fullName>
            </value>
            <value>
                <fullName>AMP</fullName>
            </value>
            <value>
                <fullName>ANZ</fullName>
            </value>
            <value>
                <fullName>APO</fullName>
            </value>
            <value>
                <fullName>ARA</fullName>
            </value>
            <value>
                <fullName>ASL</fullName>
            </value>
            <value>
                <fullName>AUB</fullName>
            </value>
            <value>
                <fullName>BAE</fullName>
            </value>
            <value>
                <fullName>BAL</fullName>
            </value>
            <value>
                <fullName>BAY</fullName>
            </value>
            <value>
                <fullName>BBL</fullName>
            </value>
            <value>
                <fullName>BCA</fullName>
            </value>
            <value>
                <fullName>BCC</fullName>
            </value>
            <value>
                <fullName>BCY</fullName>
            </value>
            <value>
                <fullName>BML</fullName>
            </value>
            <value>
                <fullName>BNP</fullName>
            </value>
            <value>
                <fullName>BOC</fullName>
            </value>
            <value>
                <fullName>BOM</fullName>
            </value>
            <value>
                <fullName>BOT</fullName>
            </value>
            <value>
                <fullName>BPS</fullName>
            </value>
            <value>
                <fullName>BQL</fullName>
            </value>
            <value>
                <fullName>BSA</fullName>
            </value>
            <value>
                <fullName>BTA</fullName>
            </value>
            <value>
                <fullName>BWA</fullName>
            </value>
            <value>
                <fullName>BYB</fullName>
            </value>
            <value>
                <fullName>CAN</fullName>
            </value>
            <value>
                <fullName>CAP</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>