force-app/main/default/objects/tc9_pr__Payment_Detail__c/fields/tc9_pr__Bank_Account_Suffix__c.field-meta.xml
<CustomField>
    <fullName>tc9_pr__Bank_Account_Suffix__c</fullName>
    <description>For Payee&apos;s, the suffix of the account that payments will be made into.
For Payment Entity&apos;s, the suffix of the account that payments will be made from.</description>
    <inlineHelpText>For Payee&apos;s, the suffix of the account that payments will be made into.
For Payment Entity&apos;s, the suffix of the account that payments will be made from.</inlineHelpText>
    <label>Bank Account Suffix</label>
    <length>7</length>
    <type>Text</type>
</CustomField>