force-app/main/default/objects/tc9_pr__Payment_Detail__c/fields/tc9_pr__Bank_Description__c.field-meta.xml
<CustomField>
    <fullName>tc9_pr__Bank_Description__c</fullName>
    <description>For Payment Entity&apos;s, the description that will be included on the Payment File specifying where the payment is made from.</description>
    <inlineHelpText>For Payment Entity&apos;s, the description that will be included on the Payment File specifying where the payment is made from.</inlineHelpText>
    <label>Bank Description</label>
    <type>TextArea</type>
</CustomField>