force-app/main/default/objects/tc9_pr__Payment_Detail__c/fields/tc9_pr__Cheque_Recipient__c.field-meta.xml
<CustomField>
    <fullName>tc9_pr__Cheque_Recipient__c</fullName>
    <description>For Payee&apos;s, to whom a cheque for payment should be made out to.</description>
    <inlineHelpText>For Payee&apos;s, to whom a cheque for payment should be made out to.</inlineHelpText>
    <label>Cheque Recipient</label>
    <type>TextArea</type>
</CustomField>