force-app/main/default/objects/tc9_pr__Payment_Detail__c/fields/tc9_pr__Distribution_Type__c.field-meta.xml
<CustomField>
    <fullName>tc9_pr__Distribution_Type__c</fullName>
    <description>&quot;For Payee&apos;s, how the payments made will be distributed. 
Where Fixed Amount is selected, funds will be  distributed to the value defined in the Fixed Amount field.
Where Percentage is selected, funds remaining after any fixed amounts are taken will be distributed at the percentage rate defined in the Percentage field.
Where Amount Remaining is selected, all unallocated funds will be allocated.&quot;</description>
    <inlineHelpText>&quot;How the payments made will be distributed. 
Fixed Amount - the value defined in the Fixed Amount field
Percentage - the percentage rate defined in the Percentage field
Amount Remaining - all unallocated funds will be allocated.&quot;</inlineHelpText>
    <label>Distribution Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Balance</fullName>
            </value>
            <value>
                <fullName>Fixed Amount</fullName>
            </value>
            <value>
                <fullName>Percentage</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>