force-app/main/default/objects/tc9_pr__Payment_Detail__c/fields/tc9_pr__Effective_Date__c.field-meta.xml
<CustomField>
    <fullName>tc9_pr__Effective_Date__c</fullName>
    <description>&quot;For Payee&apos;s, the date the Payment Detail will become effective. Payments to this record will not be made before this date. 
For Payment Entity&apos;s, the date the Payment Detail will become effective. Payments from this record will not be made before this date.</description>
    <inlineHelpText>For Payee&apos;s, the date the Payment Detail will become effective. Payments to this record will not be made before this date. For Payment Entity&apos;s, the date the Payment Detail will become effective. Payments from this record will not be made before this date</inlineHelpText>
    <label>Effective Date</label>
    <type>Date</type>
</CustomField>