force-app/main/default/objects/tc9_pr__Payment_Detail__c/fields/tc9_pr__Employee__c.field-meta.xml
<CustomField>
    <fullName>tc9_pr__Employee__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The Employee to whom the Payment Detail relates</description>
    <inlineHelpText>The Employee to whom the Payment Detail relates</inlineHelpText>
    <label>Employee</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Payment Details</relationshipLabel>
    <relationshipName>Payment_Details</relationshipName>
    <type>Lookup</type>
</CustomField>