force-app/main/default/objects/tc9_pr__Payment_Detail__c/fields/tc9_pr__Expiry_Date__c.field-meta.xml
<CustomField>
    <fullName>tc9_pr__Expiry_Date__c</fullName>
    <description>For Payee&apos;s, the date the Payment Detail will expire. Payments to this record will not be made after this date. 
For Payment Entity&apos;s, the date the Payment Detail will expire. Payments from this record will not be made after this date.</description>
    <inlineHelpText>For Payee&apos;s, the date the Payment Detail will expire. Payments to this record will not be made after this date. 
For Payment Entity&apos;s, the date the Payment Detail will expire. Payments from this record will not be made after this date.</inlineHelpText>
    <label>Expiry Date</label>
    <type>Date</type>
</CustomField>