force-app/main/default/objects/tc9_pr__Payment_Detail__c/fields/tc9_pr__Fixed_Amount__c.field-meta.xml
<CustomField>
    <fullName>tc9_pr__Fixed_Amount__c</fullName>
    <description>For Payee&apos;s, when the Distribution Type is &quot;Fixed Amount&apos; this field defines the value to be distributed to the Payment Detail.</description>
    <inlineHelpText>For Payee&apos;s, when the Distribution Type is &quot;Fixed Amount&apos; this field defines the value to be distributed to the Payment Detail.</inlineHelpText>
    <label>Fixed Amount</label>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>