force-app/main/default/objects/tc9_pr__Payment_Detail__c/fields/tc9_pr__International_Bank_Account_Number_IBAN__c.field-meta.xml
<CustomField>
    <fullName>tc9_pr__International_Bank_Account_Number_IBAN__c</fullName>
    <description>For Payee&apos;s, the account number of the International Bank Account that payments will be made into.</description>
    <inlineHelpText>For Payee&apos;s, the account number of the International Bank Account that payments will be made into.</inlineHelpText>
    <label>International Bank Account Number (IBAN)</label>
    <length>50</length>
    <type>Text</type>
</CustomField>