force-app/main/default/objects/tc9_pr__Payment_Detail__c/fields/tc9_pr__International_Bank_Name__c.field-meta.xml
<CustomField>
    <fullName>tc9_pr__International_Bank_Name__c</fullName>
    <description>For Payee&apos;s, the bank name of the International Bank Account that payments will be made into.</description>
    <inlineHelpText>For Payee&apos;s, the bank name of the International Bank Account that payments will be made into.</inlineHelpText>
    <label>International Bank Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>