force-app/main/default/objects/tc9_pr__Payment_Detail__c/fields/tc9_pr__International_Bank_Recipient_Address__c.field-meta.xml
<CustomField>
    <fullName>tc9_pr__International_Bank_Recipient_Address__c</fullName>
    <description>For Payee&apos;s, the address of the recipient the international payments will be made into.</description>
    <inlineHelpText>For Payee&apos;s, the address of the recipient the international payments will be made into.</inlineHelpText>
    <label>International Bank Recipient Address</label>
    <length>100</length>
    <type>Text</type>
</CustomField>