force-app/main/default/objects/tc9_pr__Payment_Detail__c/fields/tc9_pr__International_Bank_Recipient_Name__c.field-meta.xml
<CustomField>
    <fullName>tc9_pr__International_Bank_Recipient_Name__c</fullName>
    <description>For Payee&apos;s, the name of the recipient the international payments will be made into.</description>
    <inlineHelpText>For Payee&apos;s, the name of the recipient the international payments will be made into.</inlineHelpText>
    <label>International Bank Recipient Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>