force-app/main/default/objects/tc9_pr__Payment_Detail__c/fields/tc9_pr__International_Bank_SWIFT_BIC__c.field-meta.xml
<CustomField>
    <fullName>tc9_pr__International_Bank_SWIFT_BIC__c</fullName>
    <description>For Payee&apos;s, the SWIFT/BIC of the International Bank Account that payments will be made into.</description>
    <inlineHelpText>For Payee&apos;s, the SWIFT/BIC of the International Bank Account that payments will be made into.</inlineHelpText>
    <label>International Bank SWIFT/BIC</label>
    <length>11</length>
    <type>Text</type>
</CustomField>