force-app/main/default/objects/tc9_pr__Payment_Detail__c/fields/tc9_pr__Payee__c.field-meta.xml
<CustomField>
    <fullName>tc9_pr__Payee__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The Payee to whom the Payment Detail relates</description>
    <inlineHelpText>The Payee to whom the Payment Detail relates</inlineHelpText>
    <label>Payee</label>
    <referenceTo>tc9_pr__Payee__c</referenceTo>
    <relationshipLabel>Payment Details</relationshipLabel>
    <relationshipName>Payment_Details</relationshipName>
    <type>Lookup</type>
</CustomField>