force-app/main/default/objects/tc9_pr__Payment_Detail__c/fields/tc9_pr__Payment_Detail_Check_Completed__c.field-meta.xml
<CustomField>
    <fullName>tc9_pr__Payment_Detail_Check_Completed__c</fullName>
    <description>The date/time the Payment Details were last validated. This field is automatically updated.</description>
    <inlineHelpText>The date/time the Payment Details were last validated. This field is automatically updated.</inlineHelpText>
    <label>Payment Detail Check Completed</label>
    <type>DateTime</type>
</CustomField>