force-app/main/default/objects/tc9_pr__Payment_Detail__c/fields/tc9_pr__Payment_Detail_Check_Required__c.field-meta.xml
<CustomField>
    <fullName>tc9_pr__Payment_Detail_Check_Required__c</fullName>
    <description>The date/time the record last had an update that required the Payment Details to be validated. This field is automatically updated</description>
    <inlineHelpText>The date/time the record last had an update that required the Payment Details to be validated. This field is automatically updated</inlineHelpText>
    <label>Payment Detail Check Required</label>
    <type>DateTime</type>
</CustomField>