force-app/main/default/objects/tc9_pr__Payment_Detail__c/fields/tc9_pr__Payment_Entity_Bank_Account_Uses__c.field-meta.xml
<CustomField>
    <fullName>tc9_pr__Payment_Entity_Bank_Account_Uses__c</fullName>
    <description>The functions that a Payment Entity bank account can be used for.</description>
    <inlineHelpText>The functions that a Payment Entity bank account can be used for.</inlineHelpText>
    <label>Payment Entity Bank Account Uses</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>tc9_pr__Payment_Entity_Bank_Account_Uses</valueSetName>
    </valueSet>
</CustomField>