force-app/main/default/objects/tc9_pr__Payment_Detail__c/fields/tc9_pr__Payment_Method__c.field-meta.xml
<CustomField>
    <fullName>tc9_pr__Payment_Method__c</fullName>
    <description>Deprecated.</description>
    <inlineHelpText>Deprecated.</inlineHelpText>
    <label>Payment Method</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Payee Australian Bank</fullName>
                <default>true</default>
                <label>Payee Australian Bank</label>
            </value>
            <value>
                <fullName>Payee International Bank</fullName>
            </value>
            <value>
                <fullName>Cheque</fullName>
            </value>
            <value>
                <fullName>Cash</fullName>
            </value>
            <value>
                <fullName>Payment Entity Australian Bank</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>