force-app/main/default/objects/tc9_pr__Payment_Detail__c/fields/tc9_pr__Percentage__c.field-meta.xml
<CustomField>
    <fullName>tc9_pr__Percentage__c</fullName>
    <description>For Payee&apos;s, when the Distribution Type is &quot;Percentage&apos; this field defines the percentage to be distributed to the Payment Detail after any Fixed Amount distributions are taken.</description>
    <inlineHelpText>For Payee&apos;s, when the Distribution Type is &quot;Percentage&apos; this field defines the percentage to be distributed to the Payment Detail after any Fixed Amount distributions are taken.</inlineHelpText>
    <label>Percentage</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>