force-app/main/default/objects/tc9_pr__Payment_Detail__c/fields/tc9_pr__Percentage_Type__c.field-meta.xml
<CustomField>
    <fullName>tc9_pr__Percentage_Type__c</fullName>
    <description>Indicates whether a percentage distribution will be calculated on the Total Net value, or, the net value remaining after previous distributions have been applied.</description>
    <inlineHelpText>Indicates whether a percentage distribution will be calculated on the Total Net value, or, the net value remaining after previous distributions have been applied.</inlineHelpText>
    <label>Percentage Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Total Net</fullName>
            </value>
            <value>
                <fullName>Remaining Net</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>