force-app/main/default/objects/tc9_pr__Payment_Detail__c/fields/tc9_pr__Sort_Order__c.field-meta.xml
<CustomField>
    <fullName>tc9_pr__Sort_Order__c</fullName>
    <description>The order in which the payment detail records for this payee will be considered during payment file creation.</description>
    <inlineHelpText>The order in which the payment detail records for this payee will be considered during payment file creation.</inlineHelpText>
    <label>Sort Order</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>