force-app/main/default/objects/tc9_pr__Payment_Detail__c/fields/tc9_pr__Status__c.field-meta.xml
<CustomField>
    <fullName>tc9_pr__Status__c</fullName>
    <description>Indicates whether the Payment Details record is currently Pending, Active, On Hold or Inactive</description>
    <inlineHelpText>Indicates whether the Payment Details record is currently Pending, Active, On Hold or Inactive</inlineHelpText>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>tc9_pr__Active_Status_Picklists</valueSetName>
    </valueSet>
</CustomField>