force-app/main/default/objects/tc9_pr__Payment_Detail__c/recordTypes/tc9_eau__Super_Fund.recordType-meta.xml
<RecordType>
    <fullName>tc9_eau__Super_Fund</fullName>
    <active>false</active>
    <label>Super Fund</label>
</RecordType>