force-app/main/default/objects/tc9_pr__Payment_Detail__c/recordTypes/tc9_pr__Payee_Australian_Bank.recordType-meta.xml
<RecordType>
    <fullName>tc9_pr__Payee_Australian_Bank</fullName>
    <active>true</active>
    <description>Payment Details for Payees receiving payments to an Australian Bank</description>
    <label>Payee Australian Bank</label>
</RecordType>