force-app/main/default/objects/tc9_pr__Payment_Detail__c/recordTypes/tc9_pr__Payee_Cash.recordType-meta.xml
<RecordType>
    <fullName>tc9_pr__Payee_Cash</fullName>
    <active>true</active>
    <description>Payment Details for Payees receiving payments in Cash</description>
    <label>Payee Cash</label>
</RecordType>