force-app/main/default/objects/tc9_pr__Payment_Detail__c/recordTypes/tc9_pr__Payee_Cheque.recordType-meta.xml
<RecordType>
    <fullName>tc9_pr__Payee_Cheque</fullName>
    <active>true</active>
    <description>Payment Details for Payees receiving payments in Cheque form</description>
    <label>Payee Cheque</label>
</RecordType>