force-app/main/default/objects/tc9_pr__Payment_Detail__c/recordTypes/tc9_pr__Payee_International_Bank.recordType-meta.xml
<RecordType>
    <fullName>tc9_pr__Payee_International_Bank</fullName>
    <active>true</active>
    <description>Payment Details for Payees receiving payments to an International Bank</description>
    <label>Payee International Bank</label>
</RecordType>