force-app/main/default/objects/tc9_pr__Payment_Detail__c/recordTypes/tc9_pr__Payment_Entity_Australian_Bank.recordType-meta.xml
<RecordType>
    <fullName>tc9_pr__Payment_Entity_Australian_Bank</fullName>
    <active>true</active>
    <description>Creation of Payment Details for Payment Entity (Account)</description>
    <label>Payment Entity Australian Bank</label>
</RecordType>