force-app/main/default/objects/tc9_pr__Payment_Detail__c/listViews/tc9_pr__Active_Payment_Details.listView-meta.xml
<ListView>
    <fullName>tc9_pr__Active_Payment_Details</fullName>
    <columns>NAME</columns>
    <columns>RECORDTYPE</columns>
    <columns>tc9_pr__Employee__c</columns>
    <columns>tc9_pr__Payee__c</columns>
    <columns>tc9_pr__Bank_Abbreviation__c</columns>
    <columns>tc9_pr__Bank_Account_Branch_Code__c</columns>
    <columns>tc9_pr__Bank_Account_Number__c</columns>
    <columns>tc9_pr__Bank_Account_Name__c</columns>
    <columns>tc9_pr__Bank_Description__c</columns>
    <columns>tc9_pr__Sort_Order__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>tc9_pr__Status__c</field>
        <operation>equals</operation>
        <value>Active</value>
    </filters>
    <label>Active Payment Details</label>
</ListView>